hphp/hack/test/typecheck/const_attribute/static/abstract/abstract_override_concrete.php.exp
File "abstract_override_concrete.php", line 9, characters 38-43:
Member $x has the wrong type (Typing[4341])
File "abstract_override_concrete.php", line 9, characters 38-43:
Cannot re-declare this property as abstract
File "abstract_override_concrete.php", line 5, characters 29-34:
Previously defined here
